# flowpipe

./: .gitignore  README.md  example_dag.json  setup.cfg  visualize_dag_d3dag.html
examples/: example_node.py  example_pipeline.py
flowpipe/: executor.py  node.py  pipeline.py  visualizer.py
tests/: test_pipeline.py
