[metadata]
name = flowpipe
version = 0.1.0
author = Palnika Chavan
author_email = parnnnikachavan@gmail.com
description = A lightweight function pipeline builder using DAGs with optional parallelism.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/palnikachavan/flowpipe
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: 
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True

[options.package_data]
* = *.md
